--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,21 @@
     android:id="@+id/containerMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/imageThumb"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/inicial_thumb"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
         android:id="@+id/imageTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="77dp"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -21,41 +27,113 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/timer_sand_complete" />
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="124dp"
+        android:alpha="0.7"
+        android:fontFamily="@font/aleobold"
+        android:gravity="center"
+        android:text="@string/title_app"
+        android:textColor="@color/black"
+        android:textSize="60dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/textTimer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="116dp"
+        android:fontFamily="@font/aleobold"
         android:gravity="center"
         android:shadowColor="@color/black"
-        android:shadowDx="-5"
-        android:shadowDy="5"
-        android:shadowRadius="7"
+        android:shadowDx="-6"
+        android:shadowDy="6"
+        android:shadowRadius="9"
         android:text="@string/title_app"
         android:textColor="@color/greenTime"
         android:textSize="60dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+    <!--    Shadow buttons-->
     <Button
-        android:id="@+id/btnStart"
-        android:layout_width="150dp"
+
+        android:layout_width="173dp"
         android:layout_height="60dp"
-        android:layout_marginTop="92dp"
-        android:text="Button"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="96dp"
+
+        android:backgroundTint="@color/black"
+        android:clickable="false"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textTimer" />
 
     <Button
+        android:layout_width="174dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="47dp"
+
+        android:backgroundTint="@color/black"
+        android:clickable="false"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnStart" />
+
+    <Button
+        android:layout_width="173dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="47dp"
+
+        android:backgroundTint="@color/black"
+        android:clickable="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCommands" />
+
+    <Button
+        android:id="@+id/btnStart"
+        android:drawableLeft="@drawable/timer_btn_icon"
+        android:layout_width="170dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="92dp"
+        android:backgroundTint="@color/greenTime"
+        android:text="@string/start"
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        android:textStyle="bold"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textTimer" />
+
+
+    <Button
         android:id="@+id/btnCommands"
-        android:layout_width="150dp"
+        android:drawableLeft="@drawable/book_open_page_variant"
+        android:layout_width="170dp"
         android:layout_height="60dp"
         android:layout_marginTop="44dp"
-        android:text="Button"
+        android:backgroundTint="@color/greenTime"
+        android:text="@string/commands"
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,10 +141,15 @@
 
     <Button
         android:id="@+id/btnSettings"
-        android:layout_width="150dp"
+        android:drawableLeft="@drawable/ic_baseline_settings_24"
+        android:layout_width="170dp"
         android:layout_height="60dp"
         android:layout_marginTop="44dp"
-        android:text="Button"
+        android:backgroundTint="@color/greenTime"
+        android:text="@string/settings"
+        android:textSize="15dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCommands" />
