--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="122dp"
         android:alpha="0.7"
         android:fontFamily="@font/aleobold"
         android:gravity="center"
@@ -63,13 +63,15 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    
+
     <!--    Shadow buttons-->
     <Button
 
         android:layout_width="173dp"
         android:layout_height="60dp"
         android:layout_marginLeft="3dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="86dp"
 
         android:backgroundTint="@color/black"
         android:clickable="false"
@@ -83,7 +85,7 @@
         android:layout_width="174dp"
         android:layout_height="60dp"
         android:layout_marginLeft="3dp"
-        android:layout_marginTop="47dp"
+        android:layout_marginTop="27dp"
 
         android:backgroundTint="@color/black"
         android:clickable="false"
@@ -94,11 +96,12 @@
         app:layout_constraintTop_toBottomOf="@+id/btnStart" />
 
     <Button
+        android:id="@+id/button"
         android:layout_width="173dp"
         android:layout_height="60dp"
         android:layout_marginLeft="3dp"
-        android:layout_marginTop="47dp"
 
+        android:layout_marginTop="27dp"
         android:backgroundTint="@color/black"
         android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,7 +113,7 @@
         android:drawableLeft="@drawable/timer_btn_icon"
         android:layout_width="170dp"
         android:layout_height="60dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="82dp"
         android:backgroundTint="@color/greenTime"
         android:text="@string/start"
         android:textColor="@color/black"
@@ -128,7 +131,7 @@
         android:drawableLeft="@drawable/book_open_page_variant"
         android:layout_width="170dp"
         android:layout_height="60dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="24dp"
         android:backgroundTint="@color/greenTime"
         android:text="@string/commands"
         android:textColor="@color/black"
@@ -141,16 +144,17 @@
 
     <Button
         android:id="@+id/btnSettings"
-        android:drawableLeft="@drawable/ic_baseline_settings_24"
         android:layout_width="170dp"
         android:layout_height="60dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="24dp"
         android:backgroundTint="@color/greenTime"
+        android:drawableLeft="@drawable/ic_baseline_settings_24"
         android:text="@string/settings"
-        android:textSize="15dp"
         android:textColor="@color/black"
+        android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCommands" />
 
