--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".MainActivity">
+    tools:context=".TimerActivity">
 
     <EditText
         android:id="@+id/textTimer"
@@ -21,5 +21,38 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/layoutPermission"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/permissionDenied"
+            android:textSize="30dp"
+            android:layout_marginTop="150dp"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:gravity="center_vertical|center_horizontal">
+
+        </TextView>
+        <Button
+            android:id="@+id/btnPermission"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:textSize="20dp"
+            android:backgroundTint="@color/greenTime"
+            android:layout_gravity="center"
+            android:text="@string/givePermission"
+            android:textColor="@color/black"
+            android:gravity="center">
+
+        </Button>
+
+    </LinearLayout>
 
 </LinearLayout>
