--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -9,15 +9,17 @@
     android:background="@color/white"
     tools:context=".TimerActivity">
 
-    <EditText
+    <TextView
         android:id="@+id/textTimer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="LOL Timer"
+        android:clickable="true"
         android:gravity="center"
+        android:text="@string/inicial_commands_text"
         android:textColor="@color/black"
-
+        android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -54,5 +56,17 @@
         </Button>
 
     </LinearLayout>
+    <TextView
+        android:id="@+id/tipText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="30dp"
+        android:layout_marginTop="150dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:gravity="center_vertical|center_horizontal">
+
+    </TextView>
 
 </LinearLayout>
