--- a/app/src/main/res/layout/view_timer.xml
+++ b/app/src/main/res/layout/view_timer.xml
@@ -25,9 +25,10 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/iconLane"
             android:layout_width="@dimen/spellAndPositions"
             android:layout_height="@dimen/spellAndPositions"
-            android:src="@drawable/position_jungle"
+            android:src="@drawable/jungle"
             ></ImageView>
 
 
@@ -42,6 +43,7 @@
             android:layout_marginLeft="7dp"
             >
             <ImageView
+                android:id="@+id/iconSpell"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/flash"
@@ -50,15 +52,71 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@id/layoutTimer"
+            android:id="@id/textTimer"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
             android:text="00:00"
             android:gravity="center"
             android:textColor="@color/black"
-            android:textSize="65dp"
+            android:textSize="70dp"
+            android:layout_marginBottom="7dp"
             android:textStyle="bold"></TextView>
+
+        <LinearLayout
+            android:layout_width="65dp"
+            android:layout_marginTop="3dp"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/btnBoots"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="2dp"
+                android:backgroundTint="@color/black"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="100dp"
+                android:clickable="true"
+                >
+                <ImageView
+                    android:id="@+id/iconBoots"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/boots_disable"
+                    ></ImageView>
+            </androidx.cardview.widget.CardView>
+            <LinearLayout
+                android:layout_width="15dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                >
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/btnRune"
+                    android:layout_width="15dp"
+                    android:layout_marginTop="700dp"
+                    android:layout_height="15dp"
+                    app:cardCornerRadius="100dp"
+                    android:layout_gravity="start"
+                    >
+                    <ImageView
+                        android:id="@+id/iconRune"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/cosmic_insight"
+                        ></ImageView>
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </LinearLayout>
+
+
+
+
 
     </LinearLayout>
 
