--- a/app/src/main/res/layout/view_timer.xml
+++ b/app/src/main/res/layout/view_timer.xml
@@ -12,16 +12,15 @@
     app:cardCornerRadius="20dp"
     android:outlineAmbientShadowColor="@color/black"
     android:outlineSpotShadowColor="@color/black"
-
-    android:background="@color/white"
     android:fillViewport="true"
     >
 
     <LinearLayout
+        android:id="@+id/layoutContainerTimer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
         android:gravity="center|center_vertical"
+        android:background="@color/white"
         android:orientation="horizontal">
 
         <ImageView
@@ -68,7 +67,6 @@
             android:layout_width="65dp"
             android:layout_marginTop="3dp"
             android:layout_height="match_parent"
-            android:background="@color/white"
             android:gravity="center"
             android:orientation="horizontal">
 
