--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
 
+
     <ImageView
         android:id="@+id/imageTime"
         android:layout_width="match_parent"
@@ -63,9 +64,10 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    
 
     <!--    Shadow buttons-->
+
+
     <Button
 
         android:layout_width="173dp"
@@ -110,11 +112,11 @@
 
     <Button
         android:id="@+id/btnStart"
-        android:drawableLeft="@drawable/timer_btn_icon"
         android:layout_width="170dp"
         android:layout_height="60dp"
         android:layout_marginTop="82dp"
         android:backgroundTint="@color/greenTime"
+        android:drawableLeft="@drawable/timer_btn_icon"
         android:text="@string/start"
         android:textColor="@color/black"
         android:textSize="15dp"
@@ -128,11 +130,11 @@
 
     <Button
         android:id="@+id/btnCommands"
-        android:drawableLeft="@drawable/book_open_page_variant"
         android:layout_width="170dp"
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
         android:backgroundTint="@color/greenTime"
+        android:drawableLeft="@drawable/book_open_page_variant"
         android:text="@string/commands"
         android:textColor="@color/black"
         android:textSize="15dp"
@@ -158,5 +160,127 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCommands" />
 
+    <LinearLayout
+        android:id="@+id/shadowLayout"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:alpha="0.5"
+        android:background="@color/black"
+        android:translationZ="2dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp"
+        android:orientation="horizontal">
+    </LinearLayout>
+
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardIdAndRegion"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        app:cardBackgroundColor="@color/black"
+        android:translationZ="3dp"
+        app:cardCornerRadius="20dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageThumb">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="@string/summonerName"
+                android:textColor="@color/greenTime"
+                android:textSize="15dp"
+                android:textStyle="bold">
+
+            </TextView>
+
+            <EditText
+                android:id="@+id/editTextSummonerName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="@string/putSummonerName"
+                android:backgroundTint="@color/greenTime"
+                android:textColor="@color/greenTime">
+
+            </EditText>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="@string/region"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/greenTime"
+                android:textSize="15dp"
+                android:textColorHighlight="@color/white"
+                android:textStyle="bold">
+
+            </TextView>
+
+            <Spinner
+                android:id="@+id/spinnerRegion"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:background="@android:drawable/btn_dropdown"
+                android:popupBackground="@color/greenTime"
+                android:layout_marginTop="15dp"
+                android:textAlignment="center"
+                android:theme="@style/spinnerTheme"
+                android:backgroundTint="@color/greenTime"
+                android:backgroundTintMode="multiply"
+                android:spinnerMode="dropdown" />
+
+            <Button
+                android:id="@+id/btnStartInCard"
+                android:layout_width="170dp"
+                android:layout_height="60dp"
+                android:backgroundTint="@color/greenTime"
+                android:layout_marginTop="25dp"
+                android:shadowColor="@color/white"
+                android:shadowRadius="50"
+                android:drawableLeft="@drawable/timer_btn_icon"
+                android:text="@string/start"
+                android:layout_marginBottom="15dp"
+                android:textColor="@color/black"
+                android:textSize="15dp"
+                android:textStyle="bold"
+
+                 />
+            <TextView
+                android:id="@+id/textErrorInCard"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                android:layout_marginBottom="10dp"
+                android:text="@string/error"
+                android:textColor="@color/greenTime"
+                android:textSize="20dp"
+                android:textStyle="bold">
+
+            </TextView>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
