--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,5 +23,21 @@
         <item name="android:dropDownHorizontalOffset">-4dp</item>
         <item name="android:dropDownVerticalOffset">4dp</item>
     </style>
+    <style name="SwitchGreen" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/greenTime</item>
 
+        <!-- active thumb & track color (30% transparency) -->
+        <item name="colorControlActivated">@color/greenTime</item>
+
+        <item name="thumbColor">@color/red</item>
+
+
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">@color/red
+        </item>
+
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">@color/red
+        </item>
+    </style>
 </resources>
