--- a/app/src/main/res/layout/activity_create_custom_commands.xml
+++ b/app/src/main/res/layout/activity_create_custom_commands.xml
@@ -212,6 +212,17 @@
             </LinearLayout>
             </LinearLayout>
 
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adViewCreateCommandsActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            app:adSize="SMART_BANNER"
+            app:adUnitId="ca-app-pub-5476119661051114/7045504788"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>
 
 
 
