--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -335,6 +335,18 @@
 
         </androidx.cardview.widget.CardView>
 
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adViewSettingsActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            app:adSize="SMART_BANNER"
+            app:adUnitId="ca-app-pub-5476119661051114/1330143679"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
